--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="footer">
-      <input id="taskInput" type="text" placeholder="Your task" />
+      <input id="taskInput" type="text" placeholder="Enter task" />
       <button id="taskAdd">+</button>
     </div>
   </div>
